removing outdated codes